# candles-http-api

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: CandlesHistoryGrpc.proto
src/: lib.rs  main.rs
src/app_ctx/: app.rs  settings.rs
src/grpc_client/: candles_grpc.rs  grpc_interceptor.rs  mod.rs
src/http/: builder.rs  start_up.rs
src/http/controllers/: mod.rs
src/http/controllers/candles/: candles_controller.rs  mod.rs
src/sb/: bid_ask_listener.rs  mod.rs  sb_contracts.rs
