[package]
name = "candles-http-api"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-http-server.git" }
my-http-server-controllers = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }
is-alive-middleware = { tag = "0.4.0", git = "https://github.com/ReachPay/is-alive-middleware.git" }
my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
candles-cache = { tag = "0.1.0", git = "https://github.com/my-cfd-platform/candles-cache.git" }

my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-telemetry-writer = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }

my-service-bus-tcp-client = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
my-service-bus-abstractions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-service-bus-abstractions.git" }
my-service-bus-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-service-bus-macros.git" }

tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"


[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
